# python-simplebench

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  pyproject.toml  pytest_log  python-simplebench.code-workspace  test_plan.py
.github/workflows/: coverity.yml  static.yml
.trunk/: trunk.yaml
codeql-custom-queries-python/: too_many_parameters.ql
docs/: basic.html  command_line_options.html  command_line_options.rst  conf.py  gen-docs.sh  genindex.html  index.html  installation.html  installation.rst  objects.inv  py-modindex.html  reports.html  reports.rst  search.html  searchindex.js  tutorials.html  usage.html  usage.rst
docs/_modules/: index.html
docs/_sources/: basic.rst.txt  command_line_options.rst.txt  index.rst.txt  installation.rst.txt  tutorials.rst.txt  usage.rst.txt
docs/_static/: basic.css  classic.css  custom.css  documentation_options.js
docs/doctrees/: command_line_options.doctree  index.doctree  installation.doctree
docs/html/: command_line_options.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  reports.html  search.html  searchindex.js  usage.html
docs/reports/: csv_report.html  csv_report_field_definitions.html  json_report.html  rich_table_field_definitions.html  rich_table_report.html  rich_table_report.rst
docs/source/: modules.html  modules.rst  simplebench.case.html  simplebench.cli.html  simplebench.decorators.html  simplebench.defaults.html  simplebench.defaults.rst  simplebench.doc_utils.html  simplebench.doc_utils.rst  simplebench.enums.color.html  simplebench.enums.decorators.html  simplebench.enums.exit_code.html  simplebench.enums.flag_type.html  simplebench.enums.format.html  simplebench.enums.html  simplebench.enums.section.html  simplebench.enums.target.html  simplebench.enums.verbosity.html  simplebench.exceptions.base.html  simplebench.exceptions.case.html  simplebench.exceptions.choices.html  simplebench.exceptions.cli.html  simplebench.exceptions.decorators.html  simplebench.exceptions.html  simplebench.exceptions.iteration.html  simplebench.exceptions.results.html  simplebench.exceptions.rst  simplebench.exceptions.runners.html  simplebench.exceptions.session.html  simplebench.exceptions.si_units.html  simplebench.exceptions.tasks.html  simplebench.exceptions.utils.html  simplebench.html  simplebench.iteration.html  simplebench.protocols.html  simplebench.reporters.choice.choice.html  simplebench.reporters.choice.choice_conf.html  simplebench.reporters.choice.exceptions.choice.html  simplebench.reporters.choice.exceptions.choice_conf.html  simplebench.reporters.choice.exceptions.html  (+173 more)
docs/tutorials/: basic.html  controlling.html  parameterized.html
documentation/: Makefile  command_line_options.rst  conf.py  errors  gen-docs.sh  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
documentation/_helpers/: doctest_utils.py
documentation/_static/: basic.css  custom.css
documentation/doctrees/: reports.doctree  usage.doctree
documentation/html/: .buildinfo  .buildinfo.bak  command_line_options.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  reports.html  search.html  searchindex.js  tutorials.html  usage.html
documentation/reports/: csv_report.rst  csv_report_field_definitions.rst  csv_sample_output.csv  json_report.rst  rich_table_field_definitions.rst  rich_table_report.rst
documentation/source/: simplebench.cli.rst  simplebench.decorators.rst  simplebench.enums.rst  simplebench.enums.verbosity.rst  simplebench.exceptions.base.rst  simplebench.exceptions.case.rst  simplebench.exceptions.choices.rst  simplebench.exceptions.cli.rst  simplebench.exceptions.iteration.rst  simplebench.exceptions.results.rst  simplebench.exceptions.si_units.rst  simplebench.exceptions.tasks.rst  simplebench.reporters.choice.choice.rst  simplebench.reporters.choice.exceptions.choice_conf.rst  simplebench.reporters.choices.choices.rst  simplebench.reporters.choices.rst  simplebench.reporters.csv.reporter.config.rst  simplebench.reporters.csv.reporter.options.rst  simplebench.reporters.csv.reporter.reporter.rst  simplebench.reporters.graph.matplotlib.enums.style.rst  simplebench.reporters.graph.matplotlib.options.exceptions.rst  simplebench.reporters.graph.matplotlib.options.options.rst  simplebench.reporters.graph.matplotlib.reporter.options.exceptions.rst  simplebench.reporters.graph.matplotlib.reporter.reporter.rst  simplebench.reporters.graph.matplotlib.theme.base.rst  simplebench.reporters.graph.rst  simplebench.reporters.graph.scatterplot.exceptions.rst  simplebench.reporters.graph.scatterplot.options.exceptions.rst  simplebench.reporters.graph.scatterplot.reporter.config.rst  simplebench.reporters.graph.scatterplot.reporter.exceptions.rst  simplebench.reporters.graph.scatterplot.reporter.options.exceptions.rst  simplebench.reporters.graph.scatterplot.reporter.reporter.rst  simplebench.reporters.json.reader.exceptions.rst  simplebench.reporters.json.reader.reader.rst  simplebench.reporters.json.reader.rst  simplebench.reporters.json.report.base.json_metadata.rst  simplebench.reporters.json.report.base.json_report.rst  simplebench.reporters.json.report.base.json_report_schema.rst  simplebench.reporters.json.report.base.json_results.rst  simplebench.reporters.json.report.base.json_stats.rst  (+86 more)
documentation/tutorials/: basic.rst  controlling.rst  parameterized.rst
examples/: cli.py  cli_comparision_normal_vs_decorator.py  cli_using_decorators.py  example_scatterplot.py  minimal_example.py
schemas/: report-log-entry-v1.json  report-v1.json
schemas/v1/: benchmark-info.json  cpu-info.json  json-report.json  json_report.json  machine-info.json  python-info.json  report-info.json  (+5 more)
tests/: base.py  cache_factory.py  cli.py  factories.py  test_cache_factory.py  test_case.py  test_choices.py  test_decorators.py  test_factories.py  test_iteration.py  test_pytest_plugin.py  test_reporters_interfaces.py  test_results.py  test_session.py  test_si_units.py  test_stats.py  test_timers.py  test_utils.py  testspec.py
(+1512 files in other folders)
