
[project]
name = "simplebench"
authors = [
    {name = "Jerilyn Franz", email = "opensource@snowhare.com"}
]
maintainers = [
    {name = "Jerilyn Franz", email = "opensource@snowhare.com"}
]
description = "A simple pytest plugin for benchmarking"
readme = "README.md"
keywords = ["pytest", "benchmark", "performance"]
license = { file = "LICENSE" }
version = "0.0.1"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.1",
    "py-cpuinfo>=9.0.0",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "types-seaborn>=0.13.2.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplebench"]
exclude = [
    ".trunk/",
    ".git/",
    ".gitignore",
    "coverage/",
    "MODULE.bazel",
    "BUILD.bazel",
    "WORKSPACE.bazel",
]
[tool.hatch.build.targets.sdist]
exclude = [
    ".trunk/",
    ".git/",
    ".gitignore",
    "coverage/",
]
[tool.pyright]
include = ["src", "tests", "bench"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = []
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportUnnecessaryIsInstance = false


[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/JerilynFranz/python-simplebench"
Documentation = "https://python-simplebench.readthedocs.io/en/latest/"
Repository = "https://github.com/JerilynFranz/python-simplebench.git"
Issues = "https://github.com/JerilynFranz/python-simplebench/issues"
Changelog = "https://github.com/JerilynFranz/python-simplebench/blob/main/CHANGELOG.md"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
max-complexity = 10

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']
line-length = 120
include_trailing_comma = false

[tool.pylint.format]
max-line-length = 120

[tool.pylint.MASTER]
suggestion-mode = 'yes'

[tool.pytest.ini_options]
filterwarnings = ["ignore:cannot collect test class 'TestSpec':UserWarning"]

[tool.coverage.run]
branch = true
omit = [
    'test_plan.py',
    'tests/testspec.py'
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about code only used by type checking tools:
    "if TYPE_CHECKING:",
    "def .*: \\.\\.\\.$",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

# Configuration for generating a dependency graph
# See https://pypi.org/project/pydeps/
# You may need to install graphviz separately
# (e.g. `brew install graphviz` on macOS, `sudo apt install graphviz` on Debian/Ubuntu)
# Also, you may need to install the `graphviz` Python package
# (e.g. `pip install graphviz` in your development environment)
# The output file will be created at the specified location
# relative to the project root
# run 'pydeps src/simplebench' from the root directory of the project to generate the graph
[tool.pydeps]
format = "svg"
max_bacon = 1
max_cluster_size = 2
max_module_depth = 5
output = "docs/dependencies.svg"
reverse = true
cluster = true
rankdir = "BT"
no_show = true
verbose = 0
pylib = false
exclude_exact = [
    "simplebench.utils",
    "simplebench.metaclasses",
    "simplebench.si_units",
    "simplebench.exceptions",
    "simplebench.tasks",
    "simplebench.protocols",
    "simplebench.reporters.choices",
    "simplebench.reporters.metaclasses",
    "simplebench.reporters.reporter_option",
    "simplebench.reporters.csv",
    "simplebench.reporters.rich_table",
    "simplebench.reporters.graph",
    "simplebench.reporters.json",
    "simplebench.reporters.interfaces",
    "simplebench.stats",
    "simplebench.constants",
    "simplebench.enums",
    "simplebench.validators",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.6",
    "flake8>=7.3.0",
    "graphviz>=0.21.1",
    "mypy>=1.17.1",
    "py-cpuinfo>=9.0.0",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "sphinx>=8.1.3",
    "sphinxawesome-theme>=5.3.2",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "testplan>=25.8.0",
]
